# cross-sim

./: .gitignore  .gitmodules  CHANGELOG.md  LICENSE.md  pyproject.toml  readme.md  requirements.txt  tox.ini
adc/: mnist_cnn6_adc_limits.py  mnist_cnn6_dac_limits.py  resnet50_adc_limits_1slice.py  resnet50_adc_limits_1slice_ibit.py  resnet50_adc_limits_bitsliced.py  resnet50_dac_limits.py  vgg19_adc_limits_1slice_percentile.py  vgg19_dac_limits_optimizer.py
adc/adc_limits/cifar10/: ResNet14_ADC_limits_288rows.npy  ResNet14_ADC_limits_offset.npy  ResNet32_ADC_limits.npy
adc/adc_limits/examples/: ADClimits_1152rows_1slices_BALANCED.npy
adc/adc_limits/imagenet/: ResNet50_ADC_limits.npy  ResNet50v15_ADC_limits_balanced.npy  ResNet50v15_ADC_limits_offset.npy
adc/adc_limits/imagenet_bitslicing/: ResNet50v15_1152rows_2slices_pct=99.999_offset.npy  ResNet50v15_1152rows_2slices_pct=99.99_balanced.npy  ResNet50v15_1152rows_2slices_pct=99.9_balanced.npy  ResNet50v15_1152rows_4slices_pct=99.995_balanced.npy  ResNet50v15_1152rows_4slices_pct=99.99_offset.npy  ResNet50v15_1152rows_4slices_pct=99.9_offset.npy  ResNet50v15_1152rows_8slices_pct=99.95_balanced.npy  ResNet50v15_1152rows_8slices_pct=99.9995_balanced.npy  ResNet50v15_1152rows_8slices_pct=99.999_balanced.npy  ResNet50v15_1152rows_8slices_pct=99.99_balanced.npy  ResNet50v15_144rows_2slices_pct=99.99_balanced.npy  ResNet50v15_144rows_2slices_pct=99.99_offset.npy  ResNet50v15_144rows_4slices_pct=99.95_offset.npy  ResNet50v15_144rows_4slices_pct=99.995_offset.npy  ResNet50v15_144rows_4slices_pct=99.999_balanced.npy  ResNet50v15_144rows_4slices_pct=99.999_offset.npy  ResNet50v15_144rows_4slices_pct=99.99_balanced.npy  ResNet50v15_288rows_2slices_pct=99.99_balanced.npy  ResNet50v15_288rows_4slices_pct=99.95_balanced.npy  ResNet50v15_288rows_4slices_pct=99.95_offset.npy  ResNet50v15_288rows_4slices_pct=99.999_balanced.npy  ResNet50v15_288rows_4slices_pct=99.999_offset.npy  ResNet50v15_288rows_4slices_pct=99.99_balanced.npy  ResNet50v15_288rows_4slices_pct=99.9_balanced.npy  ResNet50v15_288rows_4slices_pct=99.9_offset.npy  ResNet50v15_576rows_2slices_pct=99.9_balanced.npy  ResNet50v15_576rows_4slices_pct=99.995_balanced.npy  ResNet50v15_576rows_4slices_pct=99.99_balanced.npy  ResNet50v15_576rows_4slices_pct=99.9_balanced.npy  ResNet50v15_72rows_2slices_pct=99.99_balanced.npy  ResNet50v15_72rows_4slices_pct=99.75_balanced.npy  ResNet50v15_72rows_4slices_pct=99.95_balanced.npy  ResNet50v15_72rows_4slices_pct=99.95_offset.npy  ResNet50v15_72rows_4slices_pct=99.995_balanced.npy  ResNet50v15_72rows_4slices_pct=99.995_offset.npy  ResNet50v15_72rows_4slices_pct=99.999_balanced.npy  ResNet50v15_72rows_4slices_pct=99.999_offset.npy  ResNet50v15_72rows_4slices_pct=99.99_balanced.npy  ResNet50v15_72rows_4slices_pct=99.9_balanced.npy
adc/adc_limits/mnist/: CNN6v2_ADC_limits.npy  CNN6v2_DAC_limits.npy
applications/: mvm_params.py  readme.md
applications/dnn/: calibration.py  dataset_loaders.py  dnn_inference_params.py
applications/dnn/inference/: inference_config.py  readme.md  run_inference.py  run_inference_errorloop.py  run_inference_profiling.py
applications/dnn/torch/: calibration.py  dnn_inference_params.py
applications/dsp/: 1d_dft_example.py  2d_dft_example.py
applications/matlab/: example.json  matlab_example.m  operator.patch  readme.md
cross_sim/: __init__.py
cross_sim/cross_sim/: __init__.py
cross_sim/cross_sim/backprop/: __init__.py  a2d.py  activate.py  backprop.py  backprop_util.py  d2a.py  ncore.py  ncore_new.py  nonlinear.py  readnoise.py  rt.py  sim_tools.py  writenoise.py
cross_sim/cross_sim/xbar_simulator/: __init__.py
docs/manuals/: readme.md
docs/sphinx/source/: conf.py  dev.md  index.md  modules.rst  readme.md  simulator.algorithms.rst  simulator.backend.rst  simulator.circuits.adc.rst  simulator.circuits.dac.rst  simulator.circuits.rst  simulator.configs.rst  simulator.cores.rst  simulator.devices.rst  simulator.parameters.rst  simulator.rst  usage.md
examples/: simple_core_use.py
examples/lookup_table_generation/: create_lookup_table.py  process_measured_data.py
helpers/: dataset_loaders.py  variability_helper.py
helpers/custom_layers/: clip_constraints.py  layers_bnn.py
helpers/imagenet_preprocess/: MLPerf_cal_images.py  generate_labels.py  imagenet_path.py  preprocess_MLPerfMobileNet.py  preprocess_MLPerfRN50.py  preprocess_keras.py  preprocess_keras_inception.py  preprocess_torchvision.py
helpers/keras_model_builders/: buildMobilenet_int8.py  buildResnet50_int4.py  buildResnet50v15.py
inference/: inference_config.py  inference_config_larq_whetstone.py  run_inference.py  run_inference_errorloop.py  run_inference_profiling.py
inference/inference_util/: CNN_setup.py  inference_net.py  keras_parser.py  print_configuration_message.py
simulator/: __init__.py  api.py  readme.md
simulator/algorithms/: __init__.py  readme.md
simulator/algorithms/dnn/: activate.py  analog_gru.py  (+12 more)
simulator/backend/: __init__.py  backend.py  compute.py  globbing.py  registry.py
simulator/circuits/: __init__.py  array_simulator.py  readme.md
simulator/configs/: ISAAC-SarADC.json  ISAAC.json  PRIME.json  SONOS-TCAS.json  __init__.py  default.json  readme.md
simulator/cores/: __init__.py  analog_core.py  balanced_core.py  bitsliced_core.py  icore.py  numeric_core.py  offset_core.py  readme.md  utils.py  wrapper_core.py
simulator/devices/: __init__.py  base_device.py  device.py  generic_device.py  idevice.py  readme.md
simulator/parameters/: __init__.py  base_parameters.py  core_parameters.py  crosssim.py  crosssim_parameters.py  mapping.py  readme.md  simulation.py  simulation_parameters.py  utils.py  xbar.py  xbar_parameters.py
training/: MLP_training.py  lr_schedule.py  plot_tools.py  training_net.py
tutorial/: readme.md  tutorial_pt1.ipynb  tutorial_pt2.ipynb  tutorial_pt3.ipynb
tutorial/ISCA2024/: isca24_codesign.ipynb  isca24_models.ipynb  resnet14_params_RRAMMilo.p
tutorial/NICE2024/: spoken_data.py  tutorial_pt0.ipynb  tutorial_pt1.ipynb  tutorial_pt2.ipynb  tutorial_pt3.ipynb
(+387 files in other folders)
