[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "CrossSim"
description = "Accuracy simulator for analog in-memory computing"
version = "3.0b1"
license = {text = "BSD 3-Clause License"}
dependencies = [
    "numpy",
    "scipy",
]

[tool.setuptools.packages]
find = {}

[tools.setuptools.packages.find]
include = ["simulator"]

[project.optional-dependencies]
gpu = ["cupy"]
dnn-examples = ["tensorflow", "matplotlib"]
dev = [
    "pytest", 
    "pytest-cov", 
    "pytest-randomly", 
    "pytest-xdist", 
    "pytest-profiling", 
    "hypothesis", 
    "ruff", 
    "mypy", 
    "sphinx", 
    "sphinx-rtd-theme",
    "myst-parser",
    "tox"
]

[tool.pytest.ini_options]
testpaths = [
    "tests"
]


[tool.ruff]
# See different rule sets at:
# https://docs.astral.sh/ruff/rules/
select = ["E", "F", "B", "C", "W", "D", "S", "BLE", "A", "COM", "CPY", "Q", "RSE", "TID", "PTH", "ERA"]
ignore = []

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = ["B", "F401", "ERA001"]

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 88

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.10.
target-version = "py310"

# Ignore `E402` (import violations) in all `__init__.py` files, and in `path/to/file.py`.
[tool.ruff.per-file-ignores]
"__init__.py" = ["E402", "F401"]
"**/algorithms/archive/**" = ["ALL"]

[tool.ruff.pydocstyle]
convention = "google"

[[tool.mypy.overrides]]
# https://mypy.readthedocs.io/en/stable/config_file.html#the-mypy-configuration-file
module = [
    "cupy",
    "numpy",
    "scipy.*"
]
ignore_missing_imports = true

